把邮箱服务器，也改成参数化，可配置的

--- a/SendEmail/Web.config
+++ b/SendEmail/Web.config
@@ -17,6 +17,10 @@
     <add key="SendEmail" value="fangsheng93@163.com"/>
     <!--发件人密码-->
     <add key="SendEmailPWD" value="Cfs15012970957"/>
+    <!--邮箱服务器-->
+    <add key="SendEmailServer" value="smtp.163.com"/>
+    <!--邮箱端口-->
+    <add key="SendEmailPort" value="25"/>
     
   </appSettings>
   <system.web>
